<resources>
    <string name="app_name">BFFinder</string>
    <string name="txttitulo_register">Sign Up</string>
    <string name="txtname_register">Name</string>
    <string name="txtsurname_register">Surname</string>
    <string name="txtpass_register">Password</string>
    <string name="txtstratum_register">Social Stratum</string>
    <string name="txtaddres_register">Address</string>
    <string name="txtemail_register">Email</string>
    <string name="txt_backregister">Sign In</string>
    <string name="txt_register">Have an Account?</string>
    <string name="txttitulo_login">Sign In</string>
    <string name="txt_goregister">Sign Up</string>
    <string name="txt_login">You do not have an account?</string>
    <string name="txtemail_login">Email</string>
    <string name="btxt_login">Sign In</string>
    <string name="txt_buscar">Search</string>
    <string name="txt_add">Post add</string>
    <string name="txt_pet">Home</string>
    <string name="txt_logout">Log out</string>
    <string name="txt_post">My Posts</string>
    <string name="txt_fav">Favorites</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btxt_post">Publish</string>
    <string name="txt_titlepost">New Post</string>
    <string name="txt_breed">Breed</string>
    <string name="txt_petname">Pet Name</string>
    <string name="txt_dangerous">Dangerous</string>
    <string name="txt_images">Images</string>
    <string name="txt_title">Title</string>
    <string name="txt_descriptionpost">Description</string>
    <string name="txt_location">Location</string>
    <string name="txt_specie">Specie</string>
    <string name="txt_sterilized">Sterilized</string>
    <string name="txt_age">Age</string>
    <string name="txt_sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="txt_size">Size</string>
    <string name="txt_weight">Weight</string>
    <string name="txt_vaccinated">Vaccinated</string>
    <string name="btxt_adopt">Adopt</string>
    <string name="txtname_pet">Name:</string>
    <string name="txtbreed_pet">Breed:</string>
    <string name="txtage_pet">Age:</string>
    <string name="txtsize_pet">Size:</string>
    <string name="txtweight_pet">Weigth:</string>
    <string name="txtsterilized_pet">Sterilized:</string>
    <string name="txtsex_pet">Sex:</string>
    <string name="txtdangerous_pet">Dangerous:</string>
    <string name="txtvaccined_pet">Vaccinated:</string>
    <string name="txtspecie_pet">Specie:</string>
    <string name="txt_perfilview">View Profile</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_addcomment">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>