<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    
    tools:showIn="navigation_view">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/pet_icon"
        android:title="@string/txt_pet"
        apps:showAsAction="always"/>

    <item
        android:id="@+id/item_posts"
        android:icon="@drawable/post_icon"
        android:title="@string/txt_post"
        apps:showAsAction="always"/>

    <item
        android:id="@+id/item_add"
        android:icon="@drawable/fav_icon"
        android:title="@string/txt_fav"
        apps:showAsAction="always"/>

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/txt_logout"
        apps:showAsAction="always"/>

  <item
        android:id="@+id/item_create_post"
        android:icon="@drawable/post_icon"
        android:title="Create Adoption Post"
        apps:showAsAction="always"/>

</menu>