<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".fragment.CreatePostFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_titlepost"
        android:textColor="@color/titulos_color_interno"
        android:textSize="25dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/titulos_color_interno" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_margin="8dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="18dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_images"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/idimg_pet"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:src="@drawable/add_image_icon" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/idimg_pet2"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="60dp"
                                android:src="@drawable/add_image_icon" />

                            <ImageView
                                android:id="@+id/idimg_pet3"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="60dp"
                                android:src="@drawable/add_image_icon" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/idimg_pet4"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="60dp"
                                android:src="@drawable/add_image_icon" />

                            <ImageView
                                android:id="@+id/idimg_pet5"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="60dp"
                                android:src="@drawable/add_image_icon" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_title"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:theme="@style/CampoTextoApp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:text="@string/txt_descriptionpost"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="1dp"
                    android:gravity="top|start"
                    android:hint="Text.."
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="3dp"
                    android:lines="8"
                    android:maxLines="10"
                    android:padding="15dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="12dp"
                    android:backgroundTint="@android:color/transparent"
                    android:theme="@style/CampoTextoApp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_location"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:theme="@style/CampoTextoApp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_specie"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <!-- Falta info-->
                <Spinner
                    android:id="@+id/idspinner_specie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:elevation="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_breed"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <!-- Falta info-->
                <Spinner
                    android:id="@+id/idspinner_breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:elevation="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_petname"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:theme="@style/CampoTextoApp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_dangerous"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkbox_dangerous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:theme="@style/CheckBoxColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_sterilized"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkbox_sterilized"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:theme="@style/CheckBoxColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_age"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <!-- Falta info-->
                <NumberPicker
                    android:id="@+id/np_age"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="30dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_sex"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:theme="@style/RadioButtonColor"
                        app:buttonTint="@color/titulos_color_interno" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:theme="@style/RadioButtonColor"
                        app:buttonTint="@color/titulos_color_interno" />

                    <RadioButton
                        android:id="@+id/radio_unknown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:theme="@style/RadioButtonColor"
                        app:buttonTint="@color/titulos_color_interno" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_size"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <!-- Falta info-->
                <Spinner
                    android:id="@+id/idspinner_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:elevation="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.02"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_weight"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <!-- Falta info-->
                <NumberPicker
                    android:id="@+id/np_weight"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_vaccinated"
                    android:textColor="@color/letras_color"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkbox_vaccinated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:theme="@style/CheckBoxColor" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/titulos_color_interno" />

    <Button
        android:id="@+id/idbtn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button"
        android:onClick="onCreatePost"
        android:text="@string/btxt_post"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>